Finished UI for Index Page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>
       Zerodha: Online brokerage platform for stock trading & investing
     </title>
+    <link rel="icon" href="assets/favicon.png" />
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="styles.css" />
     <link
@@ -16,7 +17,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="icon" href="assets/favicon.png" />
   </head>
 
   <body>
@@ -26,7 +26,7 @@
         <img src="assets/logo.svg" alt="Zerodha Logo" class="logo" />
         <nav class="nav-links">
           <a href="#">Signup</a>
-          <a href="pages/about.html">About</a>
+          <a href="about.html">About</a>
           <a href="#">Products</a>
           <a href="#">Pricing</a>
           <a href="#">Support</a>
@@ -115,7 +115,7 @@
           India. Flat fees and no hidden charges.
         </p>
         <div class="price-visual-btn">
-          <a href="#">See pricing &rarr;</a>
+          <a href="#">See pricing</a>
         </div>
       </div>
       <div class="price-visual">
@@ -159,6 +159,7 @@
       </div>
     </section>
 
+    <!-- Action Section -->
     <section class="action-section">
       <h2>Open a Zerodha account</h2>
       <p>
@@ -179,8 +180,6 @@
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
-          </div>
-          <div class="social-icons">
             <a href="#"><i class="fab fa-youtube"></i></a>
             <a href="#"><i class="fab fa-whatsapp"></i></a>
             <a href="#"><i class="fab fa-telegram"></i></a>
@@ -279,9 +278,23 @@
           India's largest broker based on networth as per NSE.
           <a href="">NSE broker factsheet</a>
         </p>
-        <br>
+        <br />
         <p>
-          Prevent unauthorised transactions in your account. Update your mobile numbers/email IDs with your stock brokers. Receive information of your transactions directly from Exchange on your mobile/email at the end of the day. Issued in the interest of investors. KYC is one time exercise while dealing in securities markets - once KYC is done through a SEBI registered intermediary (broker, DP, Mutual Fund etc.), you need not undergo the same process again when you approach another intermediary." Dear Investor, if you are subscribing to an IPO, there is no need to issue a cheque. Please write the Bank account number and sign the IPO application form to authorize your bank to make payment in case of allotment. In case of non allotment the funds will remain in your bank account. As a business we don't give stock tips, and have not authorized anyone to trade on behalf of others. If you find anyone claiming to be part of Zerodha and offering such services, please <a href="">create a ticket here</a>.
+          Prevent unauthorised transactions in your account. Update your mobile
+          numbers/email IDs with your stock brokers. Receive information of your
+          transactions directly from Exchange on your mobile/email at the end of
+          the day. Issued in the interest of investors. KYC is one time exercise
+          while dealing in securities markets - once KYC is done through a SEBI
+          registered intermediary (broker, DP, Mutual Fund etc.), you need not
+          undergo the same process again when you approach another
+          intermediary." Dear Investor, if you are subscribing to an IPO, there
+          is no need to issue a cheque. Please write the Bank account number and
+          sign the IPO application form to authorize your bank to make payment
+          in case of allotment. In case of non allotment the funds will remain
+          in your bank account. As a business we don't give stock tips, and have
+          not authorized anyone to trade on behalf of others. If you find anyone
+          claiming to be part of Zerodha and offering such services, please
+          <a href="">create a ticket here</a>.
         </p>
       </div>
       <div class="footer-links">
